2003-12-17  Robin Ericsson  <lobbin@localhost.nu>

	* configure.ac: Added checkes for time.h and sys/time.h

	* gnome-mud.schemas.in: Added key functionality/flush_interval

	* src/gnome-mud [connection_data]: Added last_log_flush.
	[system_data]: Added FlushInterval.

	* src/init.c (create_connection_data): Added current timestamp to new
	connection.

	* src/prefs.c (prefs_gconf_changed): Added flush_interval key.
	(load_prefs): Ditto.

	* src/window.c: Added extern prefs.
	(textfield_add): flush logfiles if a certain gconf settable amount
	of time have passed since last lines were written. Fixes bug #116325.

2003-12-17  Jordi Mallach  <jordi@sindominio.net>

	* autogen.sh: Remove workarounds for configure.ac, gnome-common 2.4.0
	groks new autoconf versions.

	* src/gnome-mud.c (gconf_sanity_check_string): New function stolen
	from gnome-games to check for badly installed schemas.
	(main): check for "/apps/gnome-mud/functionality/terminal_type" before
	starting.

2003-12-12  Jordi Mallach  <jordi@sindominio.net>

	* configure.ac (ALL_LINGUAS): Added "hr" (Croatian).

	* src/data.c (find_data): Robin's patch to ignore unuseful spaces in
	input. Fixes Debian Bug#222295.
	* src/log.c (window_menu_file_save_log_file_ok_cb): Use
	vte_terminal_get_text() to get the terminal data. Fix by Dani
	Carbonell. Fixes Debian Bug#222294.
	* src/profiles.c (connections_button_press_cb): Read data from the
	correct column, to avoid segfaulting. Fix by Dani Carbonell.
	Fixes #127166.

	* NEWS: Updated.

2003-11-20  Jordi Mallach  <jordi@sindominio.net>

	* src/net.c (open_connection): initialize all the fields in
	getaddrinfo() to fix a connect error on FreeBSD. Patch by Sjoerd
	Simons.

2003-11-11  Robin Ericsson  <lobbin@localhost.nu>

	* 0.10.3 release.

2003-09-29  Jordi Mallach  <jordi@sindominio.net>

	* NEWS: Updated.

2003-09-25  Robin Ericsson  <lobbin@localhost.nu>

	* src/profiles.s (profilelist_cleanup): Removed. Fixes bug #117242.
