@@ -1,3 +1,7 @@
+2003-12-17  Jordi Mallach  <jordi@sindominio.net>
+
+	* gnome-mud.schemas.in: Added missing <long> descriptions.
+
 2003-12-17  Robin Ericsson  <lobbin@localhost.nu>
 
 	* configure.ac: Added checkes for time.h and sys/time.h
